--- a/Site/public/css/feedVagas.css
+++ b/Site/public/css/feedVagas.css
@@ -123,7 +123,7 @@ body {
     font-family: var(--bold);
     font-size: var(--subtitle);
     color: var(--white);
-    margin-top: 1rem;
+    margin: 0.5rem 0rem 0.5rem 0rem;
 }
 
 .imgIcon2 {
@@ -171,6 +171,41 @@ body {
     border: none;
 }
 
+.searchBarButton {
+    height: 2.5rem;
+    width: 100%;
+    background-color: var(--lightBlue);
+    border-radius: 5px;
+    border-style: none;
+    font-size: var(--smallSubtitle);
+    font-family: var(--bold);
+    color: var(--white);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+    padding: 0;
+}
+
+.searchBarButton:hover {
+    background-color: var(--lightPurple);
+    cursor: pointer;
+}
+
+/* Search Bar Mobile*/
+.divMobile {
+    width: 100%;
+    height: 18rem;
+    display: none;
+    justify-content: space-between;
+    background-color: var(--mediumGrey);
+}
+
+.divMobileOrganizer {
+    width: 40%;
+    margin-left: 5%;
+}
+
 /* Search Bar */
 .searchBar {
     height: 2.5rem;
@@ -196,12 +231,6 @@ body {
 }
 
 .divSideBarIcon {
-    display: none;
-}
-
-.imgSearch {
-    height: 2rem;
-    margin: 0;
     display: none;
 }
 
@@ -491,6 +520,11 @@ body {
         margin-top: 1rem;
     }
 
+    .searchBarButton {
+        height: 2.5rem;
+        font-size: var(--smallText);
+    }
+
     .imgIcon2 {
         height: 1.5rem;
         margin: 0;
@@ -554,6 +588,11 @@ body {
         font-size: var(--smallText);
         color: var(--white);
         margin-top: 1rem;
+    }
+
+    .searchBarButton {
+        height: 2rem;
+        font-size: var(--extraSmallText);
     }
 
     .imgIcon2 {
@@ -687,6 +726,11 @@ body {
         margin-top: 1rem;
     }
 
+    .searchBarButton {
+        height: 1.8rem;
+        font-size: var(--extraSmallText);
+    }
+
     .imgIcon2 {
         height: 1.2rem;
     }
@@ -752,6 +796,11 @@ body {
 /* ----------------------------------------------- */
 
 @media screen and (max-width: 752px) {
+
+    /* Side Bar Mobile*/
+    .divMobile {
+        display: flex;
+    }
 
     /* Side Bar */
     .divSideBar {
@@ -828,11 +877,6 @@ body {
         height: 1.5rem;
         border-radius: 0px 0px 5px 5px;
         padding: 0px 0px 10px 10px;
-    }
-
-    .imgSearch {
-        height: calc(2rem * 0.5125);
-        display: block;
     }
 
     .divVaga {
