--- a/Site/public/css/feedEmpresa.css
+++ b/Site/public/css/feedEmpresa.css
@@ -116,3 +116,148 @@ body {
     color: var(--white);
     margin: 0;
 }
+
+.divDescriptionFormatterAlt {
+    width: 100%;
+    height: 10rem;
+    font-family: var(--regular);
+    font-size: var(--smallText);
+    color: var(--white);
+    background-color: var(--lightGrey);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    float: right;
+}
+
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+
+@media screen and (max-width: 1025px) {
+
+    .cardBody {
+        width: 30rem;
+        height: 25rem;
+    }
+
+    .imagePerson {
+        width: 5rem;
+    }
+    
+    .divTextOrganizer{
+        height: 5rem;
+    }
+
+    .namePerson {
+        font-size: var(--smallSubtitle);
+    }
+    
+    .textInfo {
+        font-size: var(--smallSubtitle);
+    }
+
+    .divDescriptionFormatterAlt {
+        height: 10rem;
+        font-size: var(--smallText);
+    }
+}
+
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+
+@media screen and (max-width: 770px) {
+
+    .cardBody {
+        width: 30rem;
+        height: 25rem;
+    }
+
+    .imagePerson {
+        width: 4rem;
+    }
+    
+    .divTextOrganizer{
+        height: 4rem;
+    }
+
+    .namePerson {
+        font-size: var(--smallText);
+    }
+    
+    .textInfo {
+        font-size: var(--smallText);
+    }
+
+    .divDescriptionFormatterAlt {
+        height: 8rem;
+        font-size: var(--smallText);
+    }
+}
+
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+
+@media screen and (max-width: 752px) {
+
+    .divCardsFormatter {
+        margin-left: 10%;
+        width: 80%;
+    }
+
+    .cardBody {
+        width: 100%;
+        height: 25rem;
+    }
+
+    .divDescriptionFormatterAlt {
+        height: 8rem;
+        font-size: var(--miniText);
+    }
+}
+
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+
+@media screen and (max-width: 432px) {
+
+    .divCardsFormatter {
+        margin-left: 5%;
+        width: 90%;
+    }
+
+    .imagePerson {
+        width: 3rem;
+    }
+    
+    .divTextOrganizer{
+        height: 3rem;
+    }
+
+    .namePerson {
+        font-size: var(--miniText);
+    }
+    
+    .textInfo {
+        font-size: var(--miniText);
+    }
+}
+
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+
+@media screen and (max-width: 380px) {
+
+    .cardBody {
+        height: 20rem;
+    }
+
+    .divDescriptionFormatterAlt {
+        height: 6rem;
+        font-size: var(--miniText);
+    }
+}
