--- a/Site/src/css/headerInstitucional.css
+++ b/Site/src/css/headerInstitucional.css
@@ -1,17 +1,8 @@
 @font-face {
-    font-family: 'Poppins-Bold';
-    src: url(./fonts/Poppins-Bold.ttf);
-}
-
-@font-face {
     font-family: 'Poppins-Medium';
-    src: url(./fonts/Poppins-Medium.ttf);
-}
-
-body {
-    margin: 0;
-    border: 0;
-    padding: 0;
+    src: url(../fonts/Poppins-Medium.ttf);
+    font-family: 'Poppins-Bold';
+    src: url(../fonts/Poppins-Bold.ttf);
 }
 
 /* Variables */
@@ -26,37 +17,33 @@ body {
     --white: #ffffff;
 
     --blueTag: #69E3E8;
-    --purpleTag: #4c2dfa;
+    --purpleTag: #7B69E8;
     --yellowTag: #FFC700;
     --redTag: #E86969;
 
     /* Margin */
-    --xxsMargin: 16px;
-    --xsMargin: 24px;
-    --sMargin: 32px;
-    --mMargin: 40px;
-    --lMargin: 48px;
-    --xlMargin: 56px;
-    --xxlMargin: 64px;
+    --xxsMargin: 1%;
+    --xsMargin: 2%;
+    --sMargin: 5%;
+    --mMargin: 10%;
+    --lMargin: 20%;
+    --xlMargin: 30%;
+    --xxlMargin: 50%;
 
     /* Font Size */
     --bigTitle: 2.5rem;
     /* Use with font-family: var(--bold) */
     --regularTitle: 2rem;
     /* Use with font-family: var(--bold) */
-    --bigText: 1.5rem;
-    /* Use with font-family: var(--regular) */
     --subtitle: 1.2rem;
     /* Use with font-family: var(--bold) */
     --smallSubtitle: 1rem;
     /* Use with font-family: var(--bold) */
+    --bigText: 1.5rem;
+    /* Use with font-family: var(--regular) */
     --smallText: 0.8rem;
     /* Use with font-family: var(--regular) */
-    --extraSmallText: 0.6rem;
-    /* Use with font-family: var(--regular) */
-    --miniText: 0.5rem;
-    /* Use with font-family: var(--regular) */
-    --microText: 0.42rem;
+    --extraSmallText: 0.7rem;
     /* Use with font-family: var(--regular) */
 
     /* Font Family */
@@ -64,6 +51,7 @@ body {
     --regular: 'Poppins-Medium';
 }
 
+/* Scrollbar Configuration */
 ::-webkit-scrollbar {
     width: 0.5rem;
     height: 1.25rem;
@@ -75,131 +63,17 @@ body {
     border-radius: 10px;
 }
 
-body
-{
-    /* height: 100vh; */
-    overflow: auto;
-    background-color: var(--darkGrey);
+/* Body */
+body {
+    margin: 0;
+    background-color: var(--backGroundGrey);
 }
 
-#container
-{
-    width: 100%;
-    height: auto;
-    padding: 100px 0 70px 0;
-    background: linear-gradient(113.81deg, #9000FF 20.06%, #00D1FF 93.18%, #00D1FF 93.18%);
-    /* height: 120vh; */
-}
-
-.box
-{
-    max-width: 450px;
-    margin: 0 auto;
-    height: 470px;
-    background-color: var(--darkGrey);
-    border-radius: 10px;
-    padding: 10px 0px;
-    /* text-align: center; */
-}
-
-#content
-{
-    max-width: 70%;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.title
-{
-    color: var(--lightBlue);
-    font-weight: bold;
-    font-size: var(--regularTitle);
-    font-family: var(--bold);
-    color: var(--white);
-    margin: 10px 0;
-    text-align: center;
-}
-
-.input
-{
-    background-color: var(--white);
-    border-radius: 10px 0px;
-    padding-left: 5px;
-    height: 50px;
-    width: 100%;
-    outline: none;
-    border: none;
-    font-family: var(--regular);
-    margin: 15px 0;
-    font-size: small;
-}
-
-#checkboxes
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-#checkboxes span
-{
-    color: var(--white);
-    font-family: var(--regular);
-    font-size: var(--smallSubtitle);
-}
-
-#container button
-{
-    border: none;
-    font-family: var(--bold);
-    color: var(--white);
-    background-color: var(--mediumGrey);
-    width: 100%;
-    height: 60px;
-    /* filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.25)); */
-    font-size: var(--subtitle);
-    cursor: pointer;
-    margin: 20px 0;
-    /* text-align: center; */
-    box-shadow: 8px 8px 10px -2px #1E9CD7;
-}
-
-#text
-{
-    float: right;
-    color: var(--white);
-    font-family: var(--regular);
-    font-size: var(--smallText);
-    cursor: pointer;
-    /* font-weight: 1; */
-}
-
-@media screen and (max-width: 420px)
-{
-    .box
-    {
-        height: 495px;
-    }
-}
-
-@media screen and (max-width: 290px)
-{
-    #checkboxes
-    {
-        flex-direction: column;
-        justify-content: flex-start;
-    }
-
-    #content
-    {
-        text-align: unset;
-    }
-}
-
+/* Header */
 .divHeaderFather {
     width: 100%;
     height: 4rem;
-    position: fixed;
+    position: unset;
     background-color: var(--darkGrey);
     align-items: center;
     text-align: center;
@@ -386,13 +260,4 @@ body
     .divHeaderIconsOrganizer {
         width: calc(48.75rem * 0.4);
     }
-}
-
-.footer
-{
-    text-align: center;
-    color: white;
-    font-family: var(--regular);
-    font-size: small;
-    padding: 30px 0;
 }
