--- a/Site/public/css/perfilCandidato.css
+++ b/Site/public/css/perfilCandidato.css
@@ -492,7 +492,8 @@ a{
 
 .nomeDesc p {
     font-size: var(--smallSubtitle);
-    padding-left: 1%;
+    font-family: var(--regular);
+    padding: 0% 2% 0% 2%;
     align-items: center;
 }
 
