--- a/Site/public/css/perfilEmpresa.css
+++ b/Site/public/css/perfilEmpresa.css
@@ -484,7 +484,8 @@ float: left;
 
 .nomeDesc p {
     font-size: var(--smallSubtitle);
-    padding-left: 1%;
+    font-family: var(--regular);
+    padding: 0% 2% 0% 2%;
     align-items: center;
 }
 
