--- a/Site/public/css/feedVagas.css
+++ b/Site/public/css/feedVagas.css
@@ -123,7 +123,7 @@ body {
     font-family: var(--bold);
     font-size: var(--subtitle);
     color: var(--white);
-    margin-top: 1rem;
+    margin: 0.75rem 0rem 0.75rem 0rem;
 }
 
 .imgIcon2 {
