--- a/Site/public/css/indexAlt.css
+++ b/Site/public/css/indexAlt.css
@@ -68,12 +68,12 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0;
 }
 .divBanner{
     width: 100%;
     height: 30%;
     margin-bottom: 4rem;
+    margin-top: 2rem;
     border-radius: 5px;
     display: flex;
     flex-wrap: wrap;
